# GRID-BASKET-SL

./: .gitignore  README.md  handoff.md
backend/: .env.example  Cargo.toml
backend/src/: engine.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/engines/: basket_manager.rs  grid.rs  kill_switch.rs  mod.rs  risk.rs  slicing.rs  trade_tracker.rs
backend/src/exchanges/: deribit.rs  hyperliquid.rs  instruments.rs  mock.rs  mod.rs
backend/src/models/: basket.rs  config.rs  mod.rs  order.rs  trade_stats.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
