[package]
name = "basket-grid-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
dashmap = "6.1"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Real exchange connectors
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"

# Hyperliquid (EIP-712 signing)
hyperliquid_rust_sdk = "0.6"
ethers = { version = "2.0", default-features = false, features = ["rustls"] }
